Adicion de pagina de contacto

--- a/src/app/main/pages/contact/contact.component.html
+++ b/src/app/main/pages/contact/contact.component.html
@@ -1,106 +1,17 @@
-<main role="main">
-    
-    <div class="card">
-        <img class="card-img-top"  src="../../../../assets/images/home.jpg" width="100%" height="800">
-        <div class="card-body card-img-overlay card-inverse shadow "> 
-            <div class="col-auto p-2 text-center" >
-                <div class="z-index-2 h5 mb-0 mr-3 font-weight-bold text-right d-flex flex-row-reverse p-5 py-2 m-0 vh-100 row justify-content-center align-items-center">
-                    <div class="bg-white opacity-100 p-1  py-2 m-0  row justify-content-center align-items-center z-index-1">
-                        <strong class=""> Obtén un desarrollo personalizado para tu empresa, sea pequeña, mediana o grande, con las 
-                            tecnologías más avanzas del mercado.
-                            <br>
-                            ¡Haz crecer tu negocio con soluciones a la medida! 
-                        </strong> 
-                    </div>
-                </div>
-            </div>
-        </div>       
-     </div>
-    <div class="text-center p-2">
-      <h2 class="featurette-heading">
-        Implementamos las tecnologías más avanzadas del mercado.
-    </h2>
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-lg-3">
-          <img  src="../../../../assets/images/react.png" alt="Generic placeholder image" width="180" height="100">
-          
-        </div>
-        <div class="col-lg-3">
-          <img  src="../../../../assets/images/angular.png" alt="Generic placeholder image" width="180" height="100">
-        </div>
-
-        <div class="col-lg-3">
-          <img  src="../../../../assets/images/powerapps.jpg" alt="Generic placeholder image" width="180" height="100">
-        </div>
-        <div class="col-lg-3">
-          <img src="../../../../assets/images/appian.png" alt="Generic placeholder image" width="120" height="60">
-          
-        </div>
-      </div>
-
-      <hr >
-
-      <div class="row">
-        <div class="col-md-12">
-          <h2 class="featurette-heading">Testimonios de nuestros clientes</h2>
-          <div class="row bg-black p-2 m-3 rounded mb-2 opacity-75">
-            <div class="col-md-1 p-2">
-                <svg width="24" height="24" viewBox="0 0 24 24" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
-                    <g transform="translate(0 -1028.4)">
-                     <path d="m12 1028.4 4 9 8 1-6 5 2 9-8-5-8 5 2-9-6-5 8-1z" fill="#f39c12"/>
-                     <path d="m12 1028.4-4 9-6.9688 0.8 4.9688 4.2-0.1875 0.8 0.1875 0.2-1.75 7.8 7.75-4.8 7.75 4.8-1.75-7.8 0.188-0.2-0.188-0.8 4.969-4.2-6.969-0.8-4-9z" fill="#f1c40f"/>
-                    </g>
-                </svg>
-            </div>
-            <div class="col-md-11">
-              <p class="text-light">Gracias al desarrollo a la medida que nos proporciono Paola Cotrina, nuestra pequeña empresa ha 
-                experimentado un aumento significatvo en la eficiencia y la productividad. <strong>John Doe</strong>
-              </p>
-            </div>
-          </div>
-          <div class="row bg-black p-2 m-3 rounded opacity-75">
-            <div class="col-md-1 p-2">
-                <svg width="24" height="24" viewBox="0 0 24 24" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
-                    <g transform="translate(0 -1028.4)">
-                     <path d="m12 1028.4 4 9 8 1-6 5 2 9-8-5-8 5 2-9-6-5 8-1z" fill="#f39c12"/>
-                     <path d="m12 1028.4-4 9-6.9688 0.8 4.9688 4.2-0.1875 0.8 0.1875 0.2-1.75 7.8 7.75-4.8 7.75 4.8-1.75-7.8 0.188-0.2-0.188-0.8 4.969-4.2-6.969-0.8-4-9z" fill="#f1c40f"/>
-                    </g>
-                </svg>
-            </div>
-            <div class="col-md-11">
-              <p class="text-light">Desde el primer contacto hasta la entrega final, ha demostrado ser un socio de desarrollo confiable
-                  orientado al cliente. Su enfoque personalizado y su dominio de las ultimas tecnologias nos han permitido llevar 
-                  nuestro negocio al siguiente nivel. <strong>Industrias LaT</strong>
-              </p>
-            </div>
-          </div>
-        </div>
-        
-      </div>
-    </div>
-    <hr class="featurette-divider">
-    <div class="row gy-4 gy-md-5 gy-lg-0 p-5" 
-    style="
-    background-image: url('../../../../assets/images/Registro.jpg');
-  "
-  width="100%" height="800">
-     
-      <div class="col-12 col-lg-6" >
-        <h2 class="text-light">Contáctanos</h2>
-        <div class="row p-2">
-         
-          <div class="col-12 col-xl-11  p-4 text-light m-2">
-            <div class="row bg-accent shadow overflow-hidden bg-black rounded">
+<div class="row">
+    <h2 >Contáctanos</h2>
+        <p>Si deseas ponerse en contacto con nuestra empresa, puede completar nuestro formulario de contacto o encontrarnos en nuestras redes sociales</p>
+        <div class="col-md-5 col-lg-5  p-4">
+            <div class="row bg-accent  overflow-hidden rounded">
               <ul class="nav justify-content-centers" >
-                <li class="nav-item col-12">
-                  <a class="nav-link link-dark text-light" href="#!">
+                <li class="nav-item col-12 m-2">
+                  <a class="nav-link link-dark" href="#!">
                     <svg width="24" height="24" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--fxemoji" preserveAspectRatio="xMidYMid meet"><path fill="#96A9B2" d="M511.824 425.007c1.941-5.245-220.916-173.519-220.916-173.519c-27.9-20.589-42.574-20.913-70.164 0c0 0-222.532 168.138-220.659 173.311l-.045.038c.023.045.06.076.091.117a48.482 48.482 0 0 0 8.119 14.157c1.473 1.786 3.248 3.282 4.955 4.837l-.083.064c.136.121.317.177.453.298c7.235 6.454 16.359 10.634 26.495 11.827c.159.019.287.102.446.121h.612c1.541.147 3.006.517 4.584.517h420.721c20.717 0 38.269-13.028 45.241-31.291c.083-.136.211-.234.287-.374l-.137-.103z"></path><path fill="#B9C5C6" d="M256.133 232.176L1.216 423.364V152.515c0-26.4 21.397-47.797 47.797-47.797h414.24c26.4 0 47.797 21.397 47.797 47.797v270.849L256.133 232.176z"></path><path fill="#EDECE6" d="M4.189 135.896l217.645 170.949c27.47 20.271 41.918 20.591 69.083 0L508.22 136.167c-3.77-6.834-9.414-12.233-15.869-16.538l2.989-2.342c-7.295-6.641-16.62-10.946-26.971-12.058l-424.455.015c-10.322 1.097-19.662 5.417-26.942 12.043l2.967 2.313c-6.38 4.245-11.972 9.551-15.75 16.296z"></path><path fill="#DCE2E2" d="M4.118 136.254C2.207 141.419 221.63 307.099 221.63 307.099c27.47 20.271 41.918 20.591 69.083 0c0 0 219.103-165.546 217.258-170.64l.045-.037c-.022-.045-.059-.074-.089-.115a47.732 47.732 0 0 0-7.994-13.939c-1.45-1.759-3.198-3.231-4.878-4.763l.082-.063c-.134-.119-.312-.175-.446-.294c-7.124-6.354-16.107-10.47-26.086-11.645c-.156-.019-.283-.1-.439-.119h-.602c-1.517-.145-2.96-.509-4.514-.509H48.81c-20.398 0-37.68 12.828-44.543 30.809c-.082.134-.208.231-.283.368l.134.102z"></path><path fill="#597B91" d="M291.401 154.645h-38.632a6.155 6.155 0 0 0-6.155 6.155v21.722a6.155 6.155 0 0 0 6.155 6.155h31.415a6.155 6.155 0 0 1 6.155 6.155v11.616a6.155 6.155 0 0 1-6.155 6.155h-31.415a6.155 6.155 0 0 0-6.155 6.155v23.578a6.155 6.155 0 0 0 6.155 6.155h41.316a6.155 6.155 0 0 1 6.155 6.155v12.441a6.155 6.155 0 0 1-6.155 6.155h-75.76a6.155 6.155 0 0 1-6.155-6.155V136.461a6.155 6.155 0 0 1 6.155-6.155h74.81c3.749 0 6.627 3.322 6.092 7.033l-1.733 12.028a6.156 6.156 0 0 1-6.093 5.278z"></path></svg>
                      jpcotrina&#64;poligran.edu.co
                   </a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link link-dark text-light" href="#!">
+                <li class="nav-item m-2">
+                  <a class="nav-link link-dark " href="#!">
                     <svg width="24" height="24" viewBox="0 0 24 24" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
                       <g transform="translate(0 -1028.4)">
                        <path d="m23.015 1046.8c0 0.3-0.052 0.6-0.156 1.1-0.105 0.4-0.214 0.8-0.329 1-0.219 0.6-0.855 1.1-1.907 1.7-0.98 0.5-1.95 0.8-2.909 0.8h-0.828c-0.261-0.1-0.558-0.2-0.892-0.2-0.333-0.1-0.583-0.2-0.75-0.3-0.156 0-0.443-0.1-0.86-0.3s-0.672-0.2-0.766-0.3c-1.022-0.3-1.934-0.8-2.736-1.3-1.3346-0.8-2.7157-1.9-4.1438-3.3-1.4176-1.5-2.5381-2.9-3.3616-4.2-0.5003-0.8-0.9329-1.7-1.2977-2.7-0.0313-0.1-0.1251-0.4-0.2815-0.8-0.1563-0.4-0.2658-0.7-0.3283-0.9-0.0522-0.1-0.1251-0.4-0.2189-0.7s-0.1616-0.6-0.2033-0.9c-0.0313-0.3-0.0469-0.5-0.0469-0.8 0-1 0.2658-2 0.7974-2.9 0.5837-1.1 1.1362-1.7 1.6574-2 0.2606-0.1 0.615-0.2 1.0632-0.3 0.4586-0.1 0.8287-0.1 1.1101-0.1h0.3284c0.1876 0.1 0.4638 0.5 0.8287 1.2 0.1146 0.2 0.271 0.5 0.469 0.8 0.1981 0.4 0.3805 0.7 0.5473 1 0.1667 0.3 0.3283 0.6 0.4847 0.9 0.0312 0 0.1198 0.1 0.2658 0.4 0.1563 0.2 0.271 0.4 0.344 0.5 0.0729 0.2 0.1094 0.3 0.1094 0.5s-0.1511 0.4-0.4534 0.8c-0.2919 0.3-0.615 0.6-0.9694 0.8-0.344 0.3-0.6672 0.5-0.9694 0.8-0.2919 0.3-0.4378 0.6-0.4378 0.8 0 0.1 0.026 0.2 0.0781 0.3 0.0522 0.2 0.0939 0.3 0.1251 0.3 0.0417 0.1 0.1147 0.2 0.2189 0.4 0.1147 0.2 0.1772 0.3 0.1877 0.3 0.7922 1.4 1.699 2.7 2.7205 3.7 1.0213 1 2.2463 1.9 3.6743 2.7 0.021 0 0.12 0.1 0.297 0.2s0.302 0.2 0.375 0.2 0.178 0.1 0.313 0.1c0.146 0.1 0.266 0.1 0.36 0.1 0.187 0 0.427-0.1 0.719-0.4s0.568-0.6 0.829-1c0.26-0.3 0.547-0.7 0.86-1 0.312-0.3 0.573-0.4 0.781-0.4 0.146 0 0.292 0 0.438 0.1 0.157 0.1 0.344 0.2 0.563 0.3 0.219 0.2 0.349 0.3 0.391 0.3 0.261 0.2 0.537 0.3 0.829 0.5 0.302 0.2 0.635 0.3 1 0.5s0.647 0.4 0.845 0.5c0.729 0.4 1.125 0.7 1.188 0.8 0.031 0.1 0.047 0.2 0.047 0.4" fill="#e74c3c"/>
@@ -119,7 +30,7 @@
                 </p>
               </div>
               <div class="row p-3">
-                <a class="nav-link link-dark col-1 p-2" href="#!">
+                <a class="nav-link link-dark col-md-2 p-2" href="#!">
                   <svg width="36" height="36" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M16 31C23.732 31 30 24.732 30 17C30 9.26801 23.732 3 16 3C8.26801 3 2 9.26801 2 17C2 19.5109 2.661 21.8674 3.81847 23.905L2 31L9.31486 29.3038C11.3014 30.3854 13.5789 31 16 31ZM16 28.8462C22.5425 28.8462 27.8462 23.5425 27.8462 17C27.8462 10.4576 22.5425 5.15385 16 5.15385C9.45755 5.15385 4.15385 10.4576 4.15385 17C4.15385 19.5261 4.9445 21.8675 6.29184 23.7902L5.23077 27.7692L9.27993 26.7569C11.1894 28.0746 13.5046 28.8462 16 28.8462Z" fill="#BFC8D0"/>
                       <path d="M28 16C28 22.6274 22.6274 28 16 28C13.4722 28 11.1269 27.2184 9.19266 25.8837L5.09091 26.9091L6.16576 22.8784C4.80092 20.9307 4 18.5589 4 16C4 9.37258 9.37258 4 16 4C22.6274 4 28 9.37258 28 16Z" fill="url(#paint0_linear_87_7264)"/>
@@ -133,19 +44,18 @@
                       </defs>
                   </svg>    
                 </a>
-                <a class="nav-link link-dark col-1 p-2" href="#!">
+                <a class="nav-link link-dark col-md-1 p-2" href="#!">
                   <svg width="36" height="36" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none"><path fill="#1877F2" d="M15 8a7 7 0 00-7-7 7 7 0 00-1.094 13.915v-4.892H5.13V8h1.777V6.458c0-1.754 1.045-2.724 2.644-2.724.766 0 1.567.137 1.567.137v1.723h-.883c-.87 0-1.14.54-1.14 1.093V8h1.941l-.31 2.023H9.094v4.892A7.001 7.001 0 0015 8z"/><path fill="#ffffff" d="M10.725 10.023L11.035 8H9.094V6.687c0-.553.27-1.093 1.14-1.093h.883V3.87s-.801-.137-1.567-.137c-1.6 0-2.644.97-2.644 2.724V8H5.13v2.023h1.777v4.892a7.037 7.037 0 002.188 0v-4.892h1.63z"/></svg>
                 </a>
               </div>
               
             </div>
-          </div>
         </div>
-      </div>
-      <div class="col-12 col-lg-6">
-        <div class="bg-accent shadow rounded overflow-hidden bg-black ">
+        
+      <div class="col-md-7 col-lg-7 p-2">
+        <div class="bg-accent shadow rounded overflow-hidden" style="background-color: #d6f4fe">
 
-          <form [formGroup]="contactform" (ngSubmit)="onSubmit()">
+            <form [formGroup]="contactform" (ngSubmit)="onSubmit()">
             <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
               <div class="col-12">
                 <input 
@@ -176,14 +86,15 @@
               </div>
               <div class="col-12">
                 <div class="d-grid">
-                  <button class="btn btn-primary btn-lg" type="submit">Enviar mensaje</button>
+                  <button class="btn btn-primary" type="submit">Enviar mensaje</button>
                 </div>
               </div>
             </div>
           </form>
-          <div *ngIf="messageForm" class="alert alert-success" role="alert">
+
+        </div>
+        <div *ngIf="messageForm" class="alert alert-success" role="alert">
             Mensaje enviado correctamente
           </div>
-        </div>
       </div>
-    </div>
+</div>
